[package]
name = "ncm_flac"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
aes = "0.8.2"
byteorder = "1.4.3"
base64 = "0.21.2"
json = "0.12.4"
metaflac = "0.2"
tempfile = "3.3.0"
id3 = "1.6.0"
phf = { version = "0.11.2", features = ["macros"] }

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1
